# libpsx

./: .gitignore  Application.mk  README
project/jni/: Android.mk
project/jni/libpcsxcore/: LnxMain.c  Makefile  Makefile.am  Makefile.in  cdriso.c  config.h  debug.h  decode_xa.c  decode_xa.h  minimal.h  misc.c  plugins.c  plugins.h  psxbios.c  psxcommon.c  psxcommon.h  psxhw.c  psxmem.c  r3000a.c  r3000a.h  sio.c
project/jni/libpcsxcore/android/: emulator.cpp  emumedia.cpp  emumedia.h  minimal.c  minimal.h  video_blit.S
project/jni/libpcsxcore/gpuAPI/: gpuAPI.cpp  gpuAPI.h
project/jni/libpcsxcore/gpuAPI/newGPU/: ARM_asm.S  core_Command.cpp  core_Dma.cpp  core_Draw.cpp  core_Misc.cpp  fixed.cpp  fixed.h  inner.cpp  inner_Blit (copy).h  inner_Blit.h  inner_Blit.h.new  inner_Blit.h.org  inner_Pixel.h  inner_Sprite.h  newGPU.cpp  newGPU.h  op_Blend.h  op_Light.h  op_Texture.h  profiller.h  raster.h  raster_Image.cpp  raster_Line.cpp  raster_Poly.cpp  raster_Sprite.cpp
project/jni/libpcsxcore/new_dynarec/: assem_arm.c  assem_arm.h  emu_if.c  emu_if.h  linkage_arm.S  new_dynarec.c
project/jni/libpcsxcore/sound/: android.c  cfg.c  dma.c  dma.h  externals.h  freeze.c  iphone.c  registers.c  regs.h  spu.c  spu.h  stdafx.h  xa.c  xa.h
project/jni/libpcsxcore/video/: cfg.c  cfg.h  draw.c  externals.h  fps.c  gpu.c  inner_Blit.h  key.c
